tests/bad/empty_array_no_hint.kel
// Array vacío sin tipo esperado → error
fn main() {
  val a = []     // sin decl_type: indeterminado
}
